--- a/todoApp/package.json
+++ b/todoApp/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-ui-loader": "^7.2.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
